--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <minio.version>8.2.1</minio.version>
         <commons-io.version>1.3.2</commons-io.version>
         <netty.version>4.1.45.Final</netty.version>
+        <jpos.version>2.1.4</jpos.version>
     </properties>
     <modules>
         <module>netty-client</module>
@@ -195,6 +196,13 @@
             <artifactId>netty-all</artifactId>
             <version>${netty.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jpos/jpos -->
+        <dependency>
+            <groupId>org.jpos</groupId>
+            <artifactId>jpos</artifactId>
+            <version>${jpos.version}</version>
+        </dependency>
+
 
     </dependencies>
 
