--- a/netty-client/pom.xml
+++ b/netty-client/pom.xml
@@ -10,6 +10,7 @@
     <groupId>vn.vnpay</groupId>
     <artifactId>netty-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>netty-client</name>
     <description>netty-client</description>
     <properties>
@@ -18,12 +19,19 @@
     <dependencies>
         <dependency>
             <groupId>vn.vnpay</groupId>
-            <artifactId>demo-netty</artifactId>
+            <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
-
     </dependencies>
 
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
