--- a/netty-server/src/main/resources/application.properties
+++ b/netty-server/src/main/resources/application.properties
@@ -1,16 +1,19 @@
-netty.tcp-port=8090
-netty.boss-count=1
-netty.worker-count=10
-netty.keep-alive=true
+spring.main.web-application-type=none
+netty.port=8090
+netty.bossCount=1
+netty.workerCount=10
+netty.keepAlive=true
 netty.backlog=100
+spring.transaction-config.location=classpath:transaction-type.yml
+spring.iso-config.location=classpath:iso/iso8583JPosXml.xml
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=qrcode
 spring.rabbitmq.password=qrcode
 spring.rabbitmq.exchange=qrcode.exchange
 spring.rabbitmq.queue=qrcode.queue
-spring.rabbitmq.reply-queue=qrcode.reply-queue
-spring.rabbitmq.routingkey=qrcode.routingkey
+spring.rabbitmq.replyQueue=qrcode.reply-queue
+spring.rabbitmq.routingKey=qrcode.routingkey
 spring.rabbitmq.channel-rpc-timeout=10000
 spring.rabbitmq.connection-timeout=20000
 spring.rabbitmq.requested-channel-max=10
