--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,6 @@
         <spring-boot.version>2.5.3</spring-boot.version>
         <commons-beanutils.version>1.8.0</commons-beanutils.version>
         <gson.version>2.8.5</gson.version>
-        <spring-boot-amqp.version>2.2.2.RELEASE</spring-boot-amqp.version>
-        <spring-redis.version>2.5.3</spring-redis.version>
         <lettuce.version>6.1.4.RELEASE</lettuce.version>
         <log4j2.version>2.11.2</log4j2.version>
         <log4j2-disruptor.version>3.3.6</log4j2-disruptor.version>
@@ -28,7 +26,6 @@
         <commons-pool.version>2.10.0</commons-pool.version>
         <lombok.version>1.18.20</lombok.version>
         <jackson-databind.version>2.12.3</jackson-databind.version>
-        <spring-cloud.version>2020.0.3</spring-cloud.version>
         <commons-configuration.version>1.10</commons-configuration.version>
         <minio.version>8.2.1</minio.version>
         <commons-io.version>1.3.2</commons-io.version>
@@ -39,6 +36,7 @@
         <module>netty-client</module>
         <module>process-transaction</module>
         <module>netty-server</module>
+        <module>common</module>
     </modules>
 
     <dependencies>
@@ -71,26 +69,6 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
-        </dependency>
-
-        <!-- RabbitMQ -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
-            <version>${spring-boot-amqp.version}</version>
-        </dependency>
-
-        <!-- Redis -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-            <version>${spring-redis.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.lettuce</groupId>
-            <artifactId>lettuce-core</artifactId>
-            <version>${lettuce.version}</version>
         </dependency>
 
         <!-- Add Log4j2 Dependency -->
@@ -137,15 +115,6 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter</artifactId>
         </dependency>
 
         <dependency>
@@ -205,26 +174,5 @@
 
 
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
