--- a/process-transaction/pom.xml
+++ b/process-transaction/pom.xml
@@ -14,8 +14,16 @@
     <description>process-transaction</description>
     <properties>
         <java.version>1.8</java.version>
+        <spring-boot-amqp.version>2.2.2.RELEASE</spring-boot-amqp.version>
     </properties>
     <dependencies>
+
+        <!-- RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>${spring-boot-amqp.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -34,12 +42,17 @@
         </dependency>
         <dependency>
             <groupId>vn.vnpay</groupId>
-            <artifactId>demo-netty</artifactId>
+            <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
-
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
