--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,14 +33,16 @@ services:
     ports:
       - "8091:8091"
     restart: always
+    volumes:
+      - ./logs/netty-server-app-1:/logs/netty-server
     environment: # Pass environment variables to the service
       netty_port: 8091
       spring_rabbitmq_host: rabbitmq
       spring_rabbitmq_port: 5672
       spring_rabbitmq_exchange: transaction.exchange
-      spring_rabbitmq_queue: transaction.queue-1
+      spring_rabbitmq_queue: transaction.queue
+      spring_rabbitmq_routingKey: transaction.routingkey
       spring_rabbitmq_replyQueue: transaction.reply-queue-1
-      spring_rabbitmq_routingKey: transaction.routingkey-1
     depends_on:
       - rabbitmq
 
@@ -52,14 +54,16 @@ services:
     ports:
       - "8092:8092"
     restart: always
+    volumes:
+      - ./logs/netty-server-app-2:/logs/netty-server
     environment: # Pass environment variables to the service
       netty_port: 8092
       spring_rabbitmq_host: rabbitmq
       spring_rabbitmq_port: 5672
       spring_rabbitmq_exchange: transaction.exchange
-      spring_rabbitmq_queue: transaction.queue-2
+      spring_rabbitmq_queue: transaction.queue
+      spring_rabbitmq_routingKey: transaction.routingkey
       spring_rabbitmq_replyQueue: transaction.reply-queue-2
-      spring_rabbitmq_routingKey: transaction.routingkey-2
     depends_on:
       - rabbitmq
 
@@ -71,6 +75,8 @@ services:
     ports:
       - "8081:8081"
     restart: always
+    volumes:
+      - ./logs/process-transaction-app-1:/logs/process
     environment: # Pass environment variables to the service
       server_port: 8081
       spring_datasource_url: jdbc:postgresql://postgres:5432/postgres
@@ -79,7 +85,8 @@ services:
       spring_rabbitmq_host: rabbitmq
       spring_rabbitmq_port: 5672
       spring_rabbitmq_exchange: transaction.exchange
-      spring_rabbitmq_queue: transaction.queue-1
+      spring_rabbitmq_queue: transaction.queue
+      spring_rabbitmq_routingKey: transaction.routingkey
     depends_on:
       - rabbitmq
       - postgres
@@ -92,6 +99,8 @@ services:
     ports:
       - "8082:8082"
     restart: always
+    volumes:
+      - ./logs/process-transaction-app-2:/logs/process
     environment: # Pass environment variables to the service
       server_port: 8082
       spring_datasource_url: jdbc:postgresql://postgres:5432/postgres
@@ -100,7 +109,8 @@ services:
       spring_rabbitmq_host: rabbitmq
       spring_rabbitmq_port: 5672
       spring_rabbitmq_exchange: transaction.exchange
-      spring_rabbitmq_queue: transaction.queue-2
+      spring_rabbitmq_queue: transaction.queue
+      spring_rabbitmq_routingKey: transaction.routingkey
     depends_on:
       - rabbitmq
       - postgres
