--- a/netty-server/src/main/resources/transaction-type.yml
+++ b/netty-server/src/main/resources/transaction-type.yml
@@ -1,14 +1,14 @@
 transaction-types:
   369:
-    0200: DEDUCTION_ORDER
-    0210: DEDUCTION_ORDER
-    0420: REVERSE_TRANSACTION_DEDUCTION
-    0430: REVERSE_TRANSACTION_DEDUCTION
+    0200: DEDUCTION_ORDER_REQUEST
+    0210: DEDUCTION_ORDER_RESPONSE
+    0420: REVERSE_TRANSACTION_DEDUCTION_REQUEST
+    0430: REVERSE_TRANSACTION_DEDUCTION_RESPONSE
   031:
-    0200: LOOKUP_BENEFICIARY_INFORMATION
-    0210: LOOKUP_BENEFICIARY_INFORMATION
+    0200: LOOKUP_BENEFICIARY_INFORMATION_REQUEST
+    0210: LOOKUP_BENEFICIARY_INFORMATION_RESPONSE
   043:
-    0200: BENEFICIARY_CONFIRM
-    0210: BENEFICIARY_CONFIRM
+    0200: BENEFICIARY_CONFIRM_REQUEST
+    0210: BENEFICIARY_CONFIRM_RESPONSE
 
 
